July17_mongoose_connect

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # to hold enviroment variable
 
-DATABASE=''
+DATABASE= mongodb+srv://ashwindeepak1997:achu1997@cluster0.oe9n9mm.mongodb.net/project_fair?retryWrites=true&w=majority&appName=Cluster0
